# meal-expense-tracker

./: .actrc  .agent_profile  .bandit  .commitlintrc.cjs  .coverage  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.example  .env.sample  .eslintrc.js  .eslintrc.json  .flake8  .git_archival.txt  .gitattributes  .gitignore  .gitlint  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .safety-project.ini  .secrets.example  .snyk  .stylelintrc.json  .tflint.hcl  .tfsec.yml  .trivyignore  .yamllint  CHANGELOG.md  CONTRIBUTING.md  DOCKER_LAMBDA_PACKAGING.md  DYNAMODB_MIGRATION.md  Dockerfile  Dockerfile.lambda  EXTERNAL_DATABASE_PLAN.md  LAMBDA_MIGRATION_GUIDE.md  (+48 more)
.cursor/hooks/: MARKDOWN_LINTING_SETUP.md  README.md  post-generate-markdown.sh
.cursor/rules/: README.md  api-design-standards.mdc  app-requirements.mdc  code-quality-complexity.mdc  data-models.mdc  development-workflow.mdc  feature-specs.mdc  git-conventions.mdc  github-actions-best-practices.mdc  google-apis-preferences.mdc  help-maintenance.mdc  javascript-eslint-standards.mdc  javascript-linting-standards.mdc  javascript-standards.mdc  markdown-generation.mdc  my-google-rules.mdc  project-specific.mdc  project-structure.mdc  python-flask-standards.mdc  security-standards.mdc  spec-driven-development.mdc  summary.mdc  terraform-standards.mdc  testing-standards.mdc  tiger-principles.mdc  tiger-style.mdc  ui-ux-specs.mdc  web-patterns.mdc
.github/: MODERNIZATION_SUMMARY.md  dependabot.yml
.github/workflows/: README.md  aws-deploy.yml  build.yml  check-commits.yml  ci.yml  codeql.yml  commit-validator.yml  deploy.yml  dev.yml  docker-build.yml  infrastructure.yml  lint.yml  pipeline.yml  prod.yml  release.yml  tag.yml  terraform-validate.yml  test.yml  version.yml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  (+230 more)
.windsurf/: README.md
.windsurf/knowledge/: javascript-organization.md
.windsurf/rules/: code-style-guide.md  google-api-standards.md  infrastructure-as-code.md
app/: __init__.py  _version.pyi  database.py  db_utils.py  extensions.py  health.py  main.py  template_filters.py  version.py
cloudformation/: github-actions-role.yml  terraform-backend.yml
docs/: ACCESSIBILITY_COMPATIBILITY_FIXES.md  ACT_TESTING.md  ACT_TESTING_GUIDE.md  ARCHITECTURE.md  AVATAR_UPLOAD_PLAN.md  BRANCH_NAMING.md  BROWSER_CONSOLE_FIXES.md  BROWSER_MCP_CONSOLE_DEBUGGING.md  CLOUDFRONT_DEPLOYMENT.md  CLOUDFRONT_IMPLEMENTATION_SUMMARY.md  CLOUDFRONT_ROUTING_OPTIONS.md  CODING_GUIDELINES.md  CONSISTENCY_FIXES.md  CONSOLE_WARNINGS_GUIDE.md  COST_ANALYSIS_CLOUDFRONT.md  CSRF_IMPLEMENTATION.md  DEBUGGING_GUIDE.md  DEPLOYMENT_PIPELINE.md  DEPLOY_ARCHITECTURE.md  DEPLOY_QUICK_REFERENCE.md  DEPLOY_WORKFLOW_REFACTORING.md  DEVELOPMENT.md  DEVELOPMENT_TOOLS.md  EMAIL_SETUP.md  EXPENSE_IMPORT_REVIEW_PLAN.md  FAVICON_SETUP.md  FAVICON_TROUBLESHOOTING.md  FEATURE_ROADMAP.md  FEATURE_STATUS.md  GOOGLE_API_COST_REDUCTION.md  GOOGLE_API_KEY_SETUP.md  GOOGLE_MAPS_API.md  GOOGLE_PLACES_FIELD_MAPPING.md  LINTING_STANDARDS.md  LOCAL_WORKFLOWS.md  MCP_BROWSER_QUICK_REFERENCE.md  MCP_DOCKER_SETUP.md  MCP_TROUBLESHOOTING.md  PINNED_SETUP_SUMMARY.md  PLAYWRIGHT_SECURITY_FIX.md  (+19 more)
image/: Dockerfile
migrations/: add_category.py  add_restaurant_fields.py  alembic.ini  env.py  script.py.mako
python_inventory_api/: security.py
recovery/: restore_partial_from_receipts.py
requirements/: base.in  base.txt  dev.in  dev.txt  prod-requirements.txt  prod.in  requirements.txt  scripts.in  scripts.txt  security-requirements.txt  security.in
scripts/: README-lambda-deployment.md  README.md  SSM_README.md  act-config.env  agent-shell-init.sh  backup_local.sh  build-container.sh  build.sh  check-docker-mcp.sh  check_db.py  check_db_connection.py  check_inline_js.sh  check_jinja_templates.py  check_rds.py  console-debugger.js  debug-workflows.sh  deploy-lambda.sh  deploy_lambda.sh  deploy_with_migrations.sh  determine_version.py  diagnose_rds.py  enable_s3_mfa_delete.sh  extract_receipt.py  fix-markdown-linting.sh  fix_migration_history.py  fix_rds_migration.py  generate_default_avatar.py  generate_icons.py  generate_version_file.py  get-act-aws-creds.sh  get_version.py  google_places_cli.py  google_places_new_api_cli.py  init_db.py  invoke_migrations.py  local-ci.sh  local-pipeline.sh  mcp-console-debug.js  mcp-health-check.js  package-docker-lambda.sh  (+51 more)
static/: site.webmanifest
templates/: add_expense.html  add_restaurant.html  base.html  edit_expense.html  edit_restaurant.html  expense_detail.html  import_restaurants.html  index.html  login.html  register.html  restaurant_details.html  restaurants.html
terraform/: .terraform.lock.hcl  DEPENDENCY_ORDER.md  README.md  backend.hcl  backend.tf  generate-backend-config.sh  kms.tf  locals.tf  main.tf  outputs.tf  package_lambda.sh  providers.tf  sns.tf  terraform.tfvars  variables.tf  versions.tf
test/: restaurants.csv
test-data/: test_event.json
tests/: README.md  conftest.py  create_test_user.py  test_app.py  test_app_init.py  test_auth.py  test_basic.py  test_config.py  test_db_connection.py  test_expenses.py  test_google_places_sync.py  test_login.py  test_login_flow.py  test_main.py  test_restaurant_details.py  test_restaurants.py
(+1078 files in other folders)
